support renames; move som js code to js folder

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
 @import '../www/static/components/highlightjs/styles/googlecode';
-@import '../www/static/codediff.js/codediff';
-@import '../www/static/css/inconsolata';
-@import '../www/static/css/style';
+@import '../js/codediff.js/codediff';
+@import './inconsolata';
+@import './style';
